@@ -1,7 +1,8 @@
 # Change log
 
 Date          Version   Comment
-2020/07/04    1.3.1     Always clean namespaces when converting, to assist Glossary import plugin.
+2020/12/13    1.3.2     Add explicit warning about encoded images in exported Word files.
+2020/08/02    1.3.1     Always clean namespaces when converting, to assist Glossary import plugin.
 2020/07/04    1.3.0     Refactored Word to XHTML conversion into a class, for re-use elsewhere.
 2018/12/09    1.2.8     Fix erroneous behaviour during Behat testing.
 2018/08/06    1.2.7     Fix get_reason declaration in Privacy API code to make it more compatible with PHP 5/7.
